# cognitive-scaffolding

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  research.md
.github/workflows/: ci.yml
data/audiences/: academics.yaml  business.yaml  business_analyst.yaml  communications.yaml  data_analyst.yaml  data_scientist.yaml  financial_analyst.yaml  genai_engineer.yaml  general.yaml  geospatial_professional.yaml  investor_relations.yaml  marketing_professional.yaml  ml_engineer.yaml  policy_maker.yaml  technical.yaml  technical_workers.yaml
data/concepts/: 3d_vision.yaml  ab_testing_for_ml.yaml  accountability_in_ai.yaml  active_learning.yaml  actor_critic_methods.yaml  adversarial_ml.yaml  affective_computing.yaml  agentic_workflows.yaml  agi_and_superintelligence.yaml  ai_alignment.yaml  ai_and_environment.yaml  ai_and_future_of_work.yaml  ai_and_law.yaml  ai_and_sustainability.yaml  ai_auditing.yaml  ai_economics.yaml  ai_for_accessibility.yaml  ai_governance.yaml  ai_in_energy.yaml  ai_in_finance.yaml  ai_in_government.yaml  ai_in_healthcare.yaml  ai_in_manufacturing.yaml  ai_in_marketing.yaml  ai_in_retail.yaml  ai_in_supply_chain.yaml  ai_literacy.yaml  ai_policy_and_regulation.yaml  ai_product_management.yaml  ai_risk_management.yaml  ai_strategy.yaml  ai_transformation.yaml  apache_spark_ml.yaml  artificial_intelligence_overview.yaml  auto_ml.yaml  (+183 more)
docs/: PRD.md  tasks.md
profiles/: chatbot_tutor.yaml  etl_explain.yaml  rag_explainer.yaml
scripts/: chatbot.py  demo.py
utils/: __init__.py  ai_client.py  cache.py  yaml_utils.py
(+91 files in other folders)
